unpackaged/main/default/objects/MALiveStopCriteria__c/MALiveStopCriteria__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MA Live Stop Criteria</label>
</CustomObject>