unpackaged/main/default/objects/MALiveStopCriteria__c/fields/GeofenceDistanceToStop__c.field-meta.xml
<CustomField>
    <fullName>GeofenceDistanceToStop__c</fullName>
    <label>Geofence Distance To Stop (feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>