unpackaged/main/default/objects/MALiveStopCriteria__c/fields/StopDistanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>StopDistanceCriteria__c</fullName>
    <label>Stop Distance Criteria (feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>