unpackaged/main/default/objects/MALiveStopCriteria__c/fields/StopTimeCriteria__c.field-meta.xml
<CustomField>
    <fullName>StopTimeCriteria__c</fullName>
    <label>StopTimeCriteria (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>